# Document-Index-MCP

./: .gitignore  CLAUDE.md  COVERAGE.md  DISCLAIMER.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  TOOLS.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-azure.yml  ghcr-build.yml
data/: coverage.json
src/document_index_mcp/: __init__.py  __main__.py  database.py  fts.py  http_server.py  segmenter.py  server.py  tools.py
src/document_index_mcp/parsers/: base.py  docx_parser.py  docx_table_converter.py  pdf_parser.py  text_parser.py
tests/: test_database.py  test_fts.py  test_golden_corpus.py  test_http.py  test_parse_endpoint.py  test_parsers.py  test_parsers_extended.py  test_segmenter.py  test_tools.py
tests/fixtures/golden_corpus/: 01-short-contract.expected.json  01-short-contract.txt  02-gdpr-art-33.expected.json  02-gdpr-art-33.txt  03-iso-27001-clause-7.expected.json  03-iso-27001-clause-7.txt  04-nis2-article-21.expected.json  04-nis2-article-21.txt  05-numbered-list.expected.json  05-numbered-list.txt  06-lettered-list.expected.json  06-lettered-list.txt  07-footnote-heavy.expected.json  07-footnote-heavy.txt  08-german-gdpr.expected.json  08-german-gdpr.txt  09-french-loi-info.expected.json  09-french-loi-info.txt  10-multi-abbrev.expected.json  10-multi-abbrev.txt  11-etc-end-of-sentence.expected.json  11-etc-end-of-sentence.txt
