[project]
name = "document-index-mcp"
version = "0.1.0"
description = "FTS5-indexed document search MCP — large document ingestion using the Law MCP pattern"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.2.0",
    "pytesseract>=0.3.10",
    "Pillow>=12.1.1",
    "aiosqlite>=0.19.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "beautifulsoup4>=4.12.0",
    "pdf2image>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[project.scripts]
document-index-mcp = "document_index_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
